--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,10 @@
 
 @layer base {
   body {
-  font-family: var(--font-josefin);
+    font-family: var(--font-josefin);
+    display: grid;
+    place-content: center;
+    min-height: 100vh;
   }
 }
 
